# Engine

./: .gitignore  CMakeLists.txt  README.md  create_engine_structure.zsh  imgui.ini
include/: Application.h  FileUtils.h  Mesh.h  Renderer.h  Shader.h  Texture.h  VertexArray.h
include/glad/: glad.h
shaders/: lit_textured.frag  lit_textured.vert
src/: Application.cpp  FileUtils.cpp  Mesh.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  glad.c  main.cpp
